--- a/intro_kim/css/intro_media.css
+++ b/intro_kim/css/intro_media.css
@@ -9,6 +9,10 @@
 
     :root   { --page-pad: 80px; }   /* ← 전역에서 고정 */
 
+    .header_bg, header{
+        z-index: 10;
+    }
+
     .inner {
         width: 100%;
         max-width: 100%;
