--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -80,7 +80,7 @@ body {
 
 .circlebody>#circle article .poster>img {
     box-sizing: border-box;
-    border: 1px solid rgba(255, 255, 255, .5);
+    /* border: 1px solid rgba(255, 255, 255, .5); */
     background: rgba(255, 255, 255, .06);
     width: 100%;
     height: 100%;
