--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -90,6 +90,9 @@ body {
     transition: .5s;
     cursor: pointer;
 }
+.circlebody>#circle article img.br{
+    opacity: 1;
+}
 
 .circlebody>#circle article .poster>img:hover {
     background: rgba(255, 255, 255, .15);
