--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -363,7 +363,7 @@ body {
     font-size: 26px;
     font-weight: 400;
     text-transform: uppercase;
-    cursor: none;
+    /* cursor: none; */
     display: flex;
     align-items: center;
     gap: 10px;
