이미지,비디오수정

--- a/moon/css/pg-style.css
+++ b/moon/css/pg-style.css
@@ -1014,7 +1014,7 @@ main {
 }
 
 .community .articles .comm_gallery .info-overlay .comm_article_info em {
-  color: #938f98;
+  color: #ffffffb8;
   font: 300 26px/100% "Assistant", sans-serif;
 }
 
